--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "sass": "^1.68.0"
+    "sass": "^1.68.0",
+    "vuex": "^4.0.2"
   }
 }
